# libepir

./: .coveralls.yml  .eslintrc.js  .gitignore  .gitmodules  200.html  CMakeLists.txt  CNAME  Cargo.toml  LICENSE  README.md  binding.gyp  index.html  jest.config.js  jest.config.ts  nuxt.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: cmake.yml  codeql.yml  node.js.yml  rust.yml
@types/: libepir.d.ts  worker-loader.d.ts
_nuxt/: 0248a7d.js  038568b.js  03c3f55.js  0485357.js  0499da8.worker.js  04f5788.js  0675bdf.js  068ac5a.js  084c5ce.js  094058b.js  0c1d4d5.js  0c50384.js  0cb4df4.js  105db98.worker.js  106591e.js  109c19e.js  139e783.js  1680f9c.worker.js  17dd2ff.js  17f725c.js  1864708.js  1891dda.js  1af935f.js  1b88551.js  1cf2fd9.js  1d04c41.js  1da0926.js  1dd4cbe.js  1ee566b.js  1f7b3d1.worker.js  203f9cb.js  207a6c5.js  20b0f64.worker.js  21a4d0c.js  22cb2e1.js  2373ae0.js  2401aea.js  2a3d851.js  2b5a1c6.js  2b9d489.js  (+187 more)
components/: ClickableButton.vue  GenerateMG.vue  HexWindow.vue  InputWithLabel.vue
debian/: changelog  control  copyright  libepir.install
pages/: index.vue
src/: .gitignore  CMakeLists.txt  addon.test.ts  addon.ts  bench_ecelgamal.c  bench_ecelgamal.cpp  bench_ecelgamal.ts  bench_ecelgamal_cpp.cpp  bench_reply_decrypt.c  bench_reply_decrypt_cpp.cpp  bench_reply_decrypt_data.h  bench_selector.c  bench_selector_cpp.cpp  bench_selectors.c  browser.html  browser.ts  ci.c  ci.h  ci.hpp  ci_napi.cpp  common.h  epir.c  epir.h  epir.hpp  epir_genm.cpp  epir_napi.cpp  epir_t.ts  genM.cpp  index.ts  test_napi.ts  test_wasm.ts  wasm.ts  wasm.worker.ts
src_c/: CMakeLists.txt  bench_ecelgamal.c  bench_ecelgamal_cpp.cpp  bench_reply_decrypt.c  bench_reply_decrypt_cpp.cpp  bench_selector.c  bench_selector_cpp.cpp  common.h  epir.c  epir.h  epir.hpp  epir_genm.cpp  epir_reply_mock.c  epir_reply_mock.h  epir_selector_factory.c  epir_selector_factory.h
src_c/test/: CMakeLists.txt  test_c.cpp  test_common.hpp  test_ecelgamal.cpp  test_misc.cpp  test_selector_factory.cpp
src_rs/: .gitignore  Cargo.toml
src_rs/src/: ecelgamal.rs  lib.rs  reply.rs  selector.rs  wasm.rs
src_rs/src/benches/: ecelgamal.rs  reply.rs  selector.rs
src_ts/: EpirBase.ts  SelectorFactory.ts  SelectorFactory.worker.ts  addon.test.ts  addon.ts  bench_ecelgamal.ts  bench_js.ts  bench_js_reply_data.json  bench_reply.ts  bench_selector.ts  browser.html  browser.ts  epir_napi.cpp  epir_t.ts  index.test.ts  index.ts  test_common.ts  types.ts  util.ts  wasm.SelectorFactory.ts  wasm.SelectorFactory.worker.ts  wasm.browser.test.ts  wasm.libepir.ts  wasm.test.ts  wasm.ts  wasm.worker.ts
src_ts/__tests__/: SelectorFactory.ts  addon.SelectorFactory.ts  addon.ts  addon_gen_mG.ts  addon_reply.ts  bench.ts  crypto.setup.ts  gen_mG.ts  index.ts  main.ts  reply.ts  util.ts  wasm.IndexedDB.ts  wasm.SelectorFactory.ts  wasm.browser.ts  wasm.extra.ts  wasm.ts  wasm_gen_mG.ts  wasm_reply.ts
src_ts/__tests__/node/: addon.SelectorFactory.ts  addon.ts  addon_gen_mG.ts  addon_reply.ts  bench.ts  index.ts  util.ts
src_ts/__tests__/wasm/: wasm.IndexedDB.ts  wasm.SelectorFactory.ts  wasm.ts  wasm_gen_mG.ts  wasm_reply.ts
src_ts/napi/: common.cpp  common.hpp  decryption_context.cpp  decryption_context.hpp  epir.cpp  selector_factory.cpp  selector_factory.hpp
