[package]
name = "epir"
version = "0.0.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
sha2 = "0.9"
rand_core = { version = "0.5", features = ["getrandom"] }
rayon = "1.5"
curve25519-dalek = { version = "3", features = [] }

[[bench]]
name = "ecelgamal"
path = "src/benches/ecelgamal.rs"
harness = false
