[package]
name = "epir"
description = "EllipticPIR client library (Rust implementation)."
version = "0.0.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EllipticPIR/libepir.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
sha2 = "0.9"

[dependencies]
rand_core = { version = "0.5", features = ["getrandom"] }
num_cpus = "1.13"
rayon = "1.5"
curve25519-dalek = { version = "3", features = [] }

[[bench]]
name = "ecelgamal"
path = "src/benches/ecelgamal.rs"
harness = false

[[bench]]
name = "selector"
path = "src/benches/selector.rs"
harness = false
